--- a/config/rubocop.yml
+++ b/config/rubocop.yml
@@ -14,6 +14,11 @@ Metrics/AbcSize:
 Metrics/LineLength:
   Max: 160
 
+# If all member of the team is Japanese, writing comments in Japanese
+# makes sense.
+Style/AsciiComments:
+  Enabled: false
+
 # Double negation is a famous Ruby idiom,
 # why not using it with confidence?
 Style/DoubleNegation:
